--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
+    "mui-tel-input": "^4.0.1",
     "next": "13.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
