--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.14",
     "@mui/styles": "^5.14.14",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "mui-tel-input": "^4.0.1",
     "next": "13.5.5",
+    "next-auth": "^4.24.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3"
