--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "mui-tel-input": "^4.0.1",
-    "next": "13.5.5",
+    "next": "^14.0.2-canary.1",
     "next-auth": "^4.24.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
