--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-GOOGLE_CLIENT_ID= "604456811509-ivvuuq5qcn3h0elfhf2lijqd6bupoemv.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET= "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"
+APPLE_CLIENT_ID=
+APPLE_SECRET=
+GOOGLE_CLIENT_ID=604456811509-ivvuuq5qcn3h0elfhf2lijqd6bupoemv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
