--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@mui/styles": "^5.14.14",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mui-tel-input": "^4.0.1",
     "next": "^14.0.2-canary.1",
     "next-auth": "^4.24.4",
+    "next-intl": "^3.0.0-beta.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
