--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "cSpell.words": [
     "Signin"
-  ]
+  ],
+  "i18n-ally.localesPaths": [
+    "messages"
+  ],
+  "i18n-ally.keystyle": "nested"
 }
